--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 tracker/build/*
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*/__pycache__/
+*.py[cod]
+*$py.class
+
+# Jupyter
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
